# glossy

./: .gitignore  GLOSSY.md  README.md  pyproject.toml
font_scraper/: .gitignore  CLAUDE.md  CODEBASE_AUDIT.md  PIPELINE.md  README.md  REFACTOR_TODO.md  TESTING_STRATEGY.md  TODO_REFACTOR.md  TODO_optimizations.md  dafont_scraper.py  db_schema.py  emnist_classifier.py  filter_config.py  font_source.py  font_utils.py  fonts.db  fontspace_scraper.py  google_fonts_scraper.py  inksight_cli.py  inksight_vectorizer.py  manifest.json  monitor_training.sh  ocr_validator.py  precompute_pseudo_gt.py  prerender_glyphs.py  prototype_ridge.py  pyproject.toml  reject_failed.py  render_all_passing.py  requirements.txt  restart_training.sh  run_connectivity_filter.py  run_inksight_all.sh  run_inksight_v2.sh  run_ocr_prefilter.py  run_ocr_prefilter.sh  run_prefilters.py  scrape_all.py  scraper_queue.py  scraper_worker.py  (+41 more)
font_scraper/docker/: build.sh  diffvg_docker.py  docker-compose.yml  inksight_docker.py  run_test.sh  stroke_model_docker.py  test_inksight.py
font_scraper/docker/diffvg/: Dockerfile  optimize_strokes.py
font_scraper/docker/inksight/: Dockerfile
font_scraper/docker/stroke_model/: .dockerignore  Dockerfile  Dockerfile.vastai  RESEARCH_NOTES.md  build_vastai.sh  compare_runs.py  dataset.py  diagnose_r.py  losses.py  model.py  pack_cache.py  predict.py  profile_step.py  render_utils.py  requirements.txt  spline.py  stroke_autopsy.py  train.py  triton_render.py  visualize.py
font_scraper/docker/trocr/: Dockerfile
font_scraper/static/js/: playback.js
font_scraper/stroke_lib/: __init__.py
font_scraper/stroke_lib/analysis/: __init__.py  segments.py  skeleton.py
font_scraper/stroke_lib/api/: __init__.py  services.py
font_scraper/stroke_lib/domain/: __init__.py  geometry.py  skeleton.py
font_scraper/stroke_lib/optimization/: __init__.py  optimizer.py  strategies.py
font_scraper/stroke_lib/templates/: __init__.py  numpad.py  repository.py
font_scraper/stroke_lib/utils/: __init__.py  geometry.py  rendering.py
font_scraper/templates/: char_grid.html  compare.html  data_management.html  editor.html  font_list.html
font_scraper/tests/: conftest.py
font_scraper/tests/integration/: test_database.py  test_scrapers.py
font_scraper/tests/regression/: test_visual.py
font_scraper/tests/unit/: test_flask_utils.py  test_geometry.py  test_merge.py  test_scoring.py  test_shapes.py  test_vertex_finders.py
models/SDT/: TEST_TRAINING.md  train_english.sh  train_macos.py
models/SDT/configs/: English_TEST.yml
sdt_word/: .gitignore  PIPELINE.md  dataset.py  font_scraper.py  generate_dataset.py  handwriting_scorer.py  svg_font_parser.py  train.py
sdt_word/checkpoints/: history.json
sdt_word/models/: __init__.py  word_model.py
sdt_word/synthetic_writers/: README.md  font_centerline.py  font_to_single_line.py  generate.py  pipeline.py  skeleton_tracer.py  svg_parser.py  validate_strokes.py
vast_setup/: IAM64_4090.yml  QUICKSTART.md  onstart.sh  setup_vast.sh  train_4090.py  trainer_4090.py
