[project]
name = "font-scraper"
version = "1.0.0"
description = "Font scraping and stroke extraction tools"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

# Exclude generated/third-party files
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    "docker/",
]

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), isort (I), and select others
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "E731",   # lambda assignment (used for inline scoring functions)
    "B008",   # function call in default argument (Flask patterns)
    "B905",   # zip without strict (Python 3.9 compat)
    "SIM108", # ternary instead of if-else (readability preference)
    "SIM105", # try-except-pass (intentional silent failures)
    "UP007",  # Use X | Y for type union (keep Optional for clarity)
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = [
    "stroke_flask",
    "stroke_core",
    "stroke_pipeline",
    "stroke_rendering",
    "stroke_scoring",
    "stroke_shapes",
    "stroke_skeleton",
    "stroke_utils",
    "stroke_affine",
    "stroke_contour",
    "stroke_dataclasses",
    "stroke_templates",
    "stroke_routes_core",
    "stroke_routes_batch",
    "stroke_routes_stream",
    "template_morph",
    "font_utils",
    "emnist_classifier",
    "inksight_vectorizer",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
